--- a/Eel Speel/Eel Speel.csproj
+++ b/Eel Speel/Eel Speel.csproj
@@ -266,6 +266,7 @@
     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Curve\BGCurveSettings.cs" />
     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Curve\BGReflectionAdapter.cs" />
     <Compile Include="Assets\Scripts\AaalMovement.cs" />
+    <Compile Include="Assets\Scripts\BodyMovement.cs" />
     <Compile Include="Assets\Scripts\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\Controller.cs" />
     <Compile Include="Assets\Scripts\FollowPath.cs" />
