--- a/Eel Speel/Assembly-CSharp-Editor.csproj
+++ b/Eel Speel/Assembly-CSharp-Editor.csproj
@@ -51,9 +51,67 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Splines\Scripts\Editor\SplineControllerInspector.cs" />
-     <Compile Include="Assets\Splines\Scripts\Editor\SplineInspector.cs" />
-     <Compile Include="Assets\Splines\Scripts\Editor\SplineNodeInspector.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Cc\BGCcCursorChangeLinearEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Cc\BGCcCursorDrawer.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Cc\BGCcCursorEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Cc\BGCcCursorObjectEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Cc\BGCcCursorObjectRotateEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Cc\BGCcCursorObjectScaleEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Cc\BGCcCursorObjectTranslateEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Cc\BGCcMathEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Cc\BGCcSplitterPolylineEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Cc\BGCcSweep2DEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Cc\BGCcTriangulate2DEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Cc\BGCcVisualizationLineRendererEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\CcInfra\BGCcAddWindow.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\CcInfra\BGCcChangeNameWindow.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\CcInfra\BGCcChoseDrawer.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\CcInfra\BGCcChoseWindow.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\CcInfra\BGCcEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\CcInfra\BGCcTreeView.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGCurveEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGCurveEditorComponents.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGCurveEditorFields.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGCurveEditorPoint.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGCurveEditorPoints.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGCurveEditorPointsSelection.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGCurveEditorSettings.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGCurveEditorTab.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGCurvePointComponentDrawer.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGCurvePointGOEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGCurveReferenceToPointEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGNewPointPositionManager.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Curve\BGRectangularSelection.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Infra\BGChoseComponentWindow.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Infra\BGCurveChosePointWindow.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Infra\BGCurvePainterGizmo.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Infra\BGCurvePainterHandles.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Infra\BGHandlesSettingsDrawer.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Infra\BGPropertyDrawer.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Infra\BGTransformMonitor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Overlay\BGOverlayMessage.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Overlay\BGPopupMenu.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Overlay\BGSceneViewOverlay.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Overlay\BGSceneViewOverlayMenu.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Overlay\BGSceneViewOverlayMenuPoint.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Overlay\BGSceneViewOverlayMenuSelection.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Overlay\BGSceneViewOverlayPointAdd.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Overlay\BGSceneViewOverlayPointAddAtDistance.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Overlay\BGSceneViewOverlayPointAddSnap2D.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Overlay\BGSceneViewOverlayPointAddSnap3D.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Overlay\BGSceneViewOverlayPointInsert.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Settings\BGAbstractSettingsForEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Settings\BGCurveSettingsForEditor.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Settings\BGCurveSettingsForEditorWindow.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Settings\BGCurveSettingsOperations.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Settings\BGCurveSettingsSO.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Utils\BGEditorUtility.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Utils\BGPrivateField.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Utils\BGStartUp.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Utils\BGTableView.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Utils\BGTransition.cs" />
+     <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Utils\BGTreeView.cs" />
+     <None Include="Assets\BansheeGz\BGCurve\readme.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
