--- a/Eel Speel/Eel Speel.csproj
+++ b/Eel Speel/Eel Speel.csproj
@@ -272,6 +272,7 @@
     <Compile Include="Assets\Scripts\FollowPath.cs" />
     <Compile Include="Assets\Scripts\MagneticObject.cs" />
     <Compile Include="Assets\Scripts\MenuButton.cs" />
+    <Compile Include="Assets\Scripts\PauseScreen.cs" />
     <Compile Include="Assets\Scripts\PlayerJoin.cs" />
     <Compile Include="Assets\Scripts\PlayerModel.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
