--- a/Eel Speel/Eel Speel.Editor.csproj
+++ b/Eel Speel/Eel Speel.Editor.csproj
@@ -268,6 +268,9 @@
     <Reference Include="UnityEditor.Purchasing">
       <HintPath>Library\UnityAssemblies\UnityEditor.Purchasing.dll</HintPath>
     </Reference>
+    <Reference Include="Assembly-CSharp">
+      <HintPath>Library\ScriptAssemblies\Assembly-CSharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Eel Speel.csproj">
