--- a/Eel Speel/Assembly-CSharp-Editor.csproj
+++ b/Eel Speel/Assembly-CSharp-Editor.csproj
@@ -111,7 +111,9 @@
      <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Utils\BGTableView.cs" />
      <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Utils\BGTransition.cs" />
      <Compile Include="Assets\BansheeGz\BGCurve\Scripts\Editor\Utils\BGTreeView.cs" />
+     <None Include="Assets\Shaders\Stone Shader.shader" />
      <None Include="Assets\BansheeGz\BGCurve\readme.txt" />
+     <None Include="Assets\Shaders\Magnetic Cone.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
